# M2GP-Tasthana

./: CMakeLists.txt  PersonalQuiz.txt  Quiz.cpp  Quiz.h  QuizData.txt  README.md  main.cpp  testing.cpp
